# deepl-deep-integration

./: .gitignore  Dockerfile  README.md  dev.tfvars  docker-compose.yml  main.tf  output.tf  prod.tfvars  staging.tfvars  variables.tf
.github/: pull_request_template.md
.github/workflows/: terraform-apply.yml  terraform-plan.yml
code/dlq_msgs/: app.py
code/extract_docs/: app.py  requirements.txt
code/input_request/: app.py
code/output_request/: app.py
code/predict_entry/: app.py
common/: constants.py
lambda_fns/dlq_msgs/: app.py
lambda_fns/entry_predict/: app.py  config.py  postprocess_cpu_model_outputs.py  postprocess_raw_preds.py
lambda_fns/entry_predict_dlq_msgs/: app.py
lambda_fns/entry_predict_input_request/: app.py
lambda_fns/entry_predict_output/: app.py
lambda_fns/entry_predict_output_request/: app.py  requirements.txt
lambda_fns/extract_docs/: Dockerfile  app.py  celery_task.py  config.py  content_types.py  pyproject.toml  requirements.txt  s3_handler.py  wget.py
lambda_fns/extract_docs/deepex_ecs/: app.py
lambda_fns/extract_docs_dlq_msgs/: app.py
lambda_fns/extract_docs_input_request/: app.py
lambda_fns/extract_docs_output_request/: app.py
lambda_fns/input_request/: app.py
lambda_fns/model_info/: app.py
lambda_fns/output_request/: app.py
mappings/: all_nlp_tags.json  constants.py  mapping_tags_nlp2original.json  nlp_matching_algorithm.py  tags_mapping.py
mockserver/: app.py  pyproject.toml  requirements.txt
modules/ecs/: ecs.tf  (+5 more)
scripts/: classification_inference_postprocessing.py  deepl_setup.sh  run_develop.sh
(+30 files in other folders)
